fixes text spilling over into date in the actions card

--- a/src/sass/components/_action.scss
+++ b/src/sass/components/_action.scss
@@ -54,6 +54,7 @@
     &__overview {
         color: $color-black-1;
         line-height: 1.3;
+        width: 95%;
     }
 
     &__location {
